Update pdf to text claude skill

--- a/z-hackernews/prompt_template_creator.ipynb
+++ b/z-hackernews/prompt_template_creator.ipynb
@@ -649,9 +649,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 4) (3232036020.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m--data '{\u001b[39m\n           ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unterminated string literal (detected at line 4)\n"
+     ]
+    }
+   ],
    "source": [
     "curl 'https://huggingface.co/api/inference-proxy/together/v1/chat/completions' \\\n",
     "-H 'Authorization: Bearer <check_env>' \\\n",
